force-app/main/default/objects/QM__c/QM__c.object-meta.xml
<CustomObject>
    <description>[a0F][QM__c]  Gestão de qualidade.</description>
    <label>QM</label>
    <nameField>
        <displayFormat>QM{000}</displayFormat>
        <label>Numeração QM</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>