force-app/main/default/objects/QM__c/fields/AccountAddressLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountAddressLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endereço da conta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Address__c.AccountLkp__c</field>
            <operation>equals</operation>
            <valueField>$Source.CaseAccountLkp__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>QMs</relationshipLabel>
    <relationshipName>QMs</relationshipName>
    <type>Lookup</type>
</CustomField>