force-app/main/default/objects/QM__c/fields/AccountIssuerLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountIssuerLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emissor da ordem</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QMs</relationshipLabel>
    <relationshipName>QMs</relationshipName>
    <type>Lookup</type>
</CustomField>