force-app/main/default/objects/QM__c/fields/AditionalDataTxt__c.field-meta.xml
<CustomField>
    <fullName>AditionalDataTxt__c</fullName>
    <label>Dados adicionais coleta</label>
    <length>40</length>
    <type>Text</type>
</CustomField>