force-app/main/default/objects/QM__c/fields/CaseAccountLkp__c.field-meta.xml
<CustomField>
    <fullName>CaseAccountLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta do caso</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QMs (Conta do caso)</relationshipLabel>
    <relationshipName>QMs1</relationshipName>
    <type>Lookup</type>
</CustomField>