force-app/main/default/objects/QM__c/fields/CaseItemLkp__c.field-meta.xml
<CustomField>
    <fullName>CaseItemLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item do caso</label>
    <referenceTo>CaseItem__c</referenceTo>
    <relationshipLabel>QMs</relationshipLabel>
    <relationshipName>QMs</relationshipName>
    <type>Lookup</type>
</CustomField>