force-app/main/default/objects/QM__c/fields/CaseLkp__c.field-meta.xml
<CustomField>
    <fullName>CaseLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>QMs</relationshipLabel>
    <relationshipName>QMs</relationshipName>
    <type>Lookup</type>
</CustomField>