force-app/main/default/objects/QM__c/fields/CityFml__c.field-meta.xml
<CustomField>
    <fullName>CityFml__c</fullName>
    <formula>AccountAddressLkp__r.CityTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cidade</label>
    <type>Text</type>
</CustomField>