force-app/main/default/objects/QM__c/fields/ClientContactLkp__c.field-meta.xml
<CustomField>
    <fullName>ClientContactLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.CaseAccountLkp__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>QMs</relationshipLabel>
    <relationshipName>QMs</relationshipName>
    <type>Lookup</type>
</CustomField>