force-app/main/default/objects/QM__c/fields/ClientContactTxt__c.field-meta.xml
<CustomField>
    <fullName>ClientContactTxt__c</fullName>
    <label>Contato do cliente</label>
    <length>35</length>
    <type>Text</type>
</CustomField>