force-app/main/default/objects/QM__c/fields/ClientEmailEml__c.field-meta.xml
<CustomField>
    <fullName>ClientEmailEml__c</fullName>
    <label>Email do cliente</label>
    <type>Email</type>
</CustomField>