force-app/main/default/objects/QM__c/fields/ClientInvoiceBln__c.field-meta.xml
<CustomField>
    <fullName>ClientInvoiceBln__c</fullName>
    <defaultValue>true</defaultValue>
    <label>NF cliente</label>
    <type>Checkbox</type>
</CustomField>