force-app/main/default/objects/QM__c/fields/ClientOrderLkp__c.field-meta.xml
<CustomField>
    <fullName>ClientOrderLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordem</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>QMs (Ordem)</relationshipLabel>
    <relationshipName>QMs1</relationshipName>
    <type>Lookup</type>
</CustomField>