force-app/main/default/objects/QM__c/fields/CNPFml__c.field-meta.xml
<CustomField>
    <fullName>CNPFml__c</fullName>
    <formula>MID(AccountIssuerLkp__r.CNPJTxt__c,0,2)&amp;
MID(AccountIssuerLkp__r.CNPJTxt__c,4,3)&amp;
MID(AccountIssuerLkp__r.CNPJTxt__c,8,3)&amp;
MID(AccountIssuerLkp__r.CNPJTxt__c,12,4)&amp;
MID(AccountIssuerLkp__r.CNPJTxt__c,17,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ</label>
    <type>Text</type>
</CustomField>