force-app/main/default/objects/QM__c/fields/ComplaintReasonTxt__c.field-meta.xml
<CustomField>
    <fullName>ComplaintReasonTxt__c</fullName>
    <label>Natureza da reclamação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>04-Expedição</fullName>
            </value>
            <value>
                <fullName>06-Produto</fullName>
            </value>
            <value>
                <fullName>07-Representante/Vendedor</fullName>
            </value>
            <value>
                <fullName>08-Transportadora</fullName>
            </value>
            <value>
                <fullName>09-Planejamento Logístico</fullName>
            </value>
            <value>
                <fullName>11-Cliente</fullName>
            </value>
            <value>
                <fullName>12-Atendimento Amanco 0800</fullName>
            </value>
            <value>
                <fullName>14-Cadastro</fullName>
            </value>
            <value>
                <fullName>15-Fiscal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>