force-app/main/default/objects/QM__c/fields/ContactPhoneFml__c.field-meta.xml
<CustomField>
    <fullName>ContactPhoneFml__c</fullName>
    <formula>ClientContactLkp__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone contato</label>
    <type>Text</type>
</CustomField>