force-app/main/default/objects/QM__c/fields/CoordinatorFml__c.field-meta.xml
<CustomField>
    <fullName>CoordinatorFml__c</fullName>
    <formula>$User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordenador</label>
    <type>Text</type>
</CustomField>