force-app/main/default/objects/QM__c/fields/DaysDueNmb__c.field-meta.xml
<CustomField>
    <fullName>DaysDueNmb__c</fullName>
    <label>Dias em atraso</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>