force-app/main/default/objects/QM__c/fields/DeliveryDateDte__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDateDte__c</fullName>
    <label>Mercadoria entregue</label>
    <type>Date</type>
</CustomField>