force-app/main/default/objects/QM__c/fields/DeliveryDateFml__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDateFml__c</fullName>
    <formula>InvoiceLkp__r.RemittanceLkp__r.ShipmentDeliveredDte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mercadoria entregue</label>
    <type>Date</type>
</CustomField>