force-app/main/default/objects/QM__c/fields/DevolutionTxt__c.field-meta.xml
<CustomField>
    <fullName>DevolutionTxt__c</fullName>
    <label>Devolução</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parcial</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>