force-app/main/default/objects/QM__c/fields/ErrorTxt__c.field-meta.xml
<CustomField>
    <fullName>ErrorTxt__c</fullName>
    <label>Erro</label>
    <type>TextArea</type>
</CustomField>