force-app/main/default/objects/QM__c/fields/FinishDateDte__c.field-meta.xml
<CustomField>
    <fullName>FinishDateDte__c</fullName>
    <label>Finalização desejada</label>
    <type>Date</type>
</CustomField>