force-app/main/default/objects/QM__c/fields/FinishDateFml__c.field-meta.xml
<CustomField>
    <fullName>FinishDateFml__c</fullName>
    <formula>StartDateDte__c  + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finalização desejada</label>
    <type>Date</type>
</CustomField>