force-app/main/default/objects/QM__c/fields/GrossWeightFml__c.field-meta.xml
<CustomField>
    <fullName>GrossWeightFml__c</fullName>
    <formula>ClientOrderLkp__r.WeightNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peso bruto</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>