force-app/main/default/objects/QM__c/fields/GrossWeightNmb__c.field-meta.xml
<CustomField>
    <fullName>GrossWeightNmb__c</fullName>
    <label>Peso bruto</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>