force-app/main/default/objects/QM__c/fields/InvoiceLkp__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nota fiscal</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>QMs</relationshipLabel>
    <relationshipName>QMs</relationshipName>
    <type>Lookup</type>
</CustomField>