force-app/main/default/objects/QM__c/fields/ManufacturingCenterFml__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingCenterFml__c</fullName>
    <formula>TEXT( CaseItemLkp__r.ManufacturingCenterTxt__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centro de fabricação</label>
    <type>Text</type>
</CustomField>