force-app/main/default/objects/QM__c/fields/ManufacturingCenterTxt__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingCenterTxt__c</fullName>
    <label>Centro de fabricação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0100-SUMARE</fullName>
            </value>
            <value>
                <fullName>0300-UBERABA</fullName>
            </value>
            <value>
                <fullName>0600-CONEXOES</fullName>
            </value>
            <value>
                <fullName>0700-ACESSORIOS</fullName>
            </value>
            <value>
                <fullName>0850-AP.GOIANIA</fullName>
            </value>
            <value>
                <fullName>0870-ANAPOLIS</fullName>
            </value>
            <value>
                <fullName>0900-SUAPE</fullName>
            </value>
            <value>
                <fullName>BR10-MEXICHEM TRADING</fullName>
            </value>
            <value>
                <fullName>BR20-SUAPE TRADING</fullName>
            </value>
            <value>
                <fullName>BR30-BIDIM.</fullName>
            </value>
            <value>
                <fullName>BR31-PLASTUBOS MG</fullName>
            </value>
            <value>
                <fullName>BR33-PLASTUBOS AL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>