force-app/main/default/objects/QM__c/fields/NeighborhoodFml__c.field-meta.xml
<CustomField>
    <fullName>NeighborhoodFml__c</fullName>
    <formula>AccountAddressLkp__r.NeighborhoodTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bairro</label>
    <type>Text</type>
</CustomField>