force-app/main/default/objects/QM__c/fields/NumberClientInvoiceTxt__c.field-meta.xml
<CustomField>
    <fullName>NumberClientInvoiceTxt__c</fullName>
    <label>Número nota fiscal cliente</label>
    <length>9</length>
    <type>Text</type>
</CustomField>