force-app/main/default/objects/QM__c/fields/Ordem_QMSAP__c.field-meta.xml
<CustomField>
    <fullName>Ordem_QMSAP__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;ClientOrderLkp__r.Id, ClientOrderLkp__r.CustomIDTxt__c,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordem SAP</label>
    <type>Text</type>
</CustomField>