force-app/main/default/objects/QM__c/fields/OrderAdditionalLkp__c.field-meta.xml
<CustomField>
    <fullName>OrderAdditionalLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordem refaturamento</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order__c.AccountLkp__c</field>
            <operation>equals</operation>
            <valueField>$Source.CaseAccountLkp__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>QMs</relationshipLabel>
    <relationshipName>QMs</relationshipName>
    <type>Lookup</type>
</CustomField>