force-app/main/default/objects/QM__c/fields/OrderNumberTxt__c.field-meta.xml
<CustomField>
    <fullName>OrderNumberTxt__c</fullName>
    <label>Número de ordem</label>
    <length>40</length>
    <type>Text</type>
</CustomField>