force-app/main/default/objects/QM__c/fields/OriginTxt__c.field-meta.xml
<CustomField>
    <fullName>OriginTxt__c</fullName>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0800</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Reclame aqui</fullName>
            </value>
            <value>
                <fullName>Agente campo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>