force-app/main/default/objects/QM__c/fields/PostalCodeFml__c.field-meta.xml
<CustomField>
    <fullName>PostalCodeFml__c</fullName>
    <formula>AccountAddressLkp__r.CEPTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEP</label>
    <type>Text</type>
</CustomField>