force-app/main/default/objects/QM__c/fields/PriorityTxt__c.field-meta.xml
<CustomField>
    <fullName>PriorityTxt__c</fullName>
    <label>Prioridade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baixa</fullName>
            </value>
            <value>
                <fullName>1-Muito alta</fullName>
            </value>
            <value>
                <fullName>2-Alta</fullName>
            </value>
            <value>
                <fullName>3-Média</fullName>
            </value>
            <value>
                <fullName>4-Baixa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>