force-app/main/default/objects/QM__c/fields/ProductActivitySectorFml__c.field-meta.xml
<CustomField>
    <fullName>ProductActivitySectorFml__c</fullName>
    <formula>TEXT( CaseItemLkp__r.ProductActivitySectorTxt__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Setor atividade produto</label>
    <type>Text</type>
</CustomField>