force-app/main/default/objects/QM__c/fields/ProductDistributionChannelFml__c.field-meta.xml
<CustomField>
    <fullName>ProductDistributionChannelFml__c</fullName>
    <formula>TEXT( CaseItemLkp__r.ProductDistributionChannelTxt__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal distribuição produto</label>
    <type>Text</type>
</CustomField>