force-app/main/default/objects/QM__c/fields/ProductFml__c.field-meta.xml
<CustomField>
    <fullName>ProductFml__c</fullName>
    <formula>CaseItemLkp__r.ProductLkp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Produto</label>
    <type>Text</type>
</CustomField>