force-app/main/default/objects/QM__c/fields/ProductSalesOfficeFml__c.field-meta.xml
<CustomField>
    <fullName>ProductSalesOfficeFml__c</fullName>
    <formula>TEXT( CaseItemLkp__r.ProductSalesOfficeTxt__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escritório vendas produto</label>
    <type>Text</type>
</CustomField>