force-app/main/default/objects/QM__c/fields/ProductSalesOrganizationFml__c.field-meta.xml
<CustomField>
    <fullName>ProductSalesOrganizationFml__c</fullName>
    <formula>TEXT( CaseItemLkp__r.ProductSalesOrganizationTxt__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organização vendas produto</label>
    <type>Text</type>
</CustomField>