force-app/main/default/objects/QM__c/fields/ProductSalesTeamFml__c.field-meta.xml
<CustomField>
    <fullName>ProductSalesTeamFml__c</fullName>
    <formula>TEXT( CaseItemLkp__r.ProductSalesTeamTxt__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipe vendas produto</label>
    <type>Text</type>
</CustomField>