force-app/main/default/objects/QM__c/fields/QMSAPTxt__c.field-meta.xml
<CustomField>
    <fullName>QMSAPTxt__c</fullName>
    <label>QM SAP</label>
    <length>12</length>
    <type>Text</type>
</CustomField>