force-app/main/default/objects/QM__c/fields/QuantityFml__c.field-meta.xml
<CustomField>
    <fullName>QuantityFml__c</fullName>
    <formula>CaseItemLkp__r.QuantityNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade referência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>