force-app/main/default/objects/QM__c/fields/RecordTxt__c.field-meta.xml
<CustomField>
    <fullName>RecordTxt__c</fullName>
    <label>Registro</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Devolução</fullName>
            </value>
            <value>
                <fullName>Reclamação</fullName>
            </value>
            <value>
                <fullName>Substituição</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>