force-app/main/default/objects/QM__c/fields/RetWithoutRemBln__c.field-meta.xml
<CustomField>
    <fullName>RetWithoutRemBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Devolução sem remessa</label>
    <type>Checkbox</type>
</CustomField>