force-app/main/default/objects/QM__c/fields/SalesforceQMTxt__c.field-meta.xml
<CustomField>
    <fullName>SalesforceQMTxt__c</fullName>
    <description>ID externo alimentado por trigger. Recebe valor número do caso + número da QM.</description>
    <externalId>true</externalId>
    <label>QM Salesforce</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>