force-app/main/default/objects/QM__c/fields/SalesOrganizationFml__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganizationFml__c</fullName>
    <formula>ClientOrderLkp__r.CodeSalesOrganizationTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organização de vendas</label>
    <type>Text</type>
</CustomField>