force-app/main/default/objects/QM__c/fields/SellerLkp__c.field-meta.xml
<CustomField>
    <fullName>SellerLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante vendedor</label>
    <referenceTo>Seller__c</referenceTo>
    <relationshipLabel>QMs</relationshipLabel>
    <relationshipName>QMs</relationshipName>
    <type>Lookup</type>
</CustomField>