force-app/main/default/objects/QM__c/fields/ShipmentDateDte__c.field-meta.xml
<CustomField>
    <fullName>ShipmentDateDte__c</fullName>
    <label>Mercadoria embarcada</label>
    <type>Date</type>
</CustomField>