force-app/main/default/objects/QM__c/fields/ShipmentDateFml__c.field-meta.xml
<CustomField>
    <fullName>ShipmentDateFml__c</fullName>
    <formula>InvoiceLkp__r.RemittanceLkp__r.ShipmentTransitDte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mercadoria embarcada</label>
    <type>Date</type>
</CustomField>