force-app/main/default/objects/QM__c/fields/StartDateDte__c.field-meta.xml
<CustomField>
    <fullName>StartDateDte__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Inicio desejado</label>
    <type>Date</type>
</CustomField>