force-app/main/default/objects/QM__c/fields/StateFml__c.field-meta.xml
<CustomField>
    <fullName>StateFml__c</fullName>
    <formula>TEXT( AccountAddressLkp__r.StateTxt__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado</label>
    <type>Text</type>
</CustomField>