force-app/main/default/objects/QM__c/fields/StatusTxt__c.field-meta.xml
<CustomField>
    <fullName>StatusTxt__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QM criada Salesforce</fullName>
                <default>true</default>
                <label>QM criada Salesforce</label>
            </value>
            <value>
                <fullName>QM enviada SAP</fullName>
            </value>
            <value>
                <fullName>QM criada SAP</fullName>
            </value>
            <value>
                <fullName>QM com erro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>