force-app/main/default/objects/QM__c/fields/StreetFml__c.field-meta.xml
<CustomField>
    <fullName>StreetFml__c</fullName>
    <formula>AccountAddressLkp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rua</label>
    <type>Text</type>
</CustomField>