force-app/main/default/objects/QM__c/fields/TechnicianLkp__c.field-meta.xml
<CustomField>
    <fullName>TechnicianLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Técnico</label>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>QMs</relationshipLabel>
    <relationshipName>QMs</relationshipName>
    <type>Lookup</type>
</CustomField>