force-app/main/default/objects/QM__c/fields/VolumeFml__c.field-meta.xml
<CustomField>
    <fullName>VolumeFml__c</fullName>
    <formula>ClientOrderLkp__r.VolumeNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>