force-app/main/default/objects/QM__c/fields/VolumeNmb__c.field-meta.xml
<CustomField>
    <fullName>VolumeNmb__c</fullName>
    <label>Volume</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>