force-app/main/default/objects/QM__c/recordTypes/QMDevolucaoParcial.recordType-meta.xml
<RecordType>
    <fullName>QMDevolucaoParcial</fullName>
    <active>true</active>
    <description>QM de devolução parcial.</description>
    <label>Devolução parcial</label>
</RecordType>