force-app/main/default/objects/QM__c/recordTypes/QMDevolucaoTotal.recordType-meta.xml
<RecordType>
    <fullName>QMDevolucaoTotal</fullName>
    <active>true</active>
    <description>QM de devolução total com Nota fiscal da Mexichem.</description>
    <label>Devolução total NF Mexichem</label>
</RecordType>