force-app/main/default/objects/QM__c/recordTypes/QMDevolucaoTotalCliente.recordType-meta.xml
<RecordType>
    <fullName>QMDevolucaoTotalCliente</fullName>
    <active>true</active>
    <description>QM de devolução total com Nota fiscal do cliente.</description>
    <label>Devolução total NF cliente</label>
</RecordType>