force-app/main/default/objects/QM__c/recordTypes/QMExtravioNotaFiscal.recordType-meta.xml
<RecordType>
    <fullName>QMExtravioNotaFiscal</fullName>
    <active>true</active>
    <description>QM para extravio de mercadoria.</description>
    <label>Extravio de nota fiscal</label>
</RecordType>