force-app/main/default/objects/QM__c/recordTypes/QMProdutoTrocadoI.recordType-meta.xml
<RecordType>
    <fullName>QMProdutoTrocadoI</fullName>
    <active>false</active>
    <description>QM para casos sobre produtos trocados de quantidades iguais.</description>
    <label>Produto Trocado quantidades iguais</label>
</RecordType>