force-app/main/default/objects/QM__c/recordTypes/QMProdutoTrocadoII.recordType-meta.xml
<RecordType>
    <fullName>QMProdutoTrocadoII</fullName>
    <active>true</active>
    <description>QM para produto trocado com quantidades diferentes.</description>
    <label>Produto Trocado quantidades diferentes</label>
</RecordType>