force-app/main/default/objects/QM__c/recordTypes/QMProrrocacao.recordType-meta.xml
<RecordType>
    <fullName>QMProrrocacao</fullName>
    <active>true</active>
    <description>QM de prorrogação por atraso de entrega ou embarque.</description>
    <label>Prorrogação</label>
</RecordType>