force-app/main/default/objects/QM__c/recordTypes/QMReclamacao.recordType-meta.xml
<RecordType>
    <fullName>QMReclamacao</fullName>
    <active>true</active>
    <description>QM utilizada pelo time de serviço técnico.</description>
    <label>Reclamação</label>
</RecordType>