force-app/main/default/objects/QM__c/recordTypes/QMRefaturamento.recordType-meta.xml
<RecordType>
    <fullName>QMRefaturamento</fullName>
    <active>false</active>
    <description>QM utilizada para casos de refaturamento.</description>
    <label>Refaturamento</label>
</RecordType>