force-app/main/default/objects/QM__c/recordTypes/QMReposicaoItemI.recordType-meta.xml
<RecordType>
    <fullName>QMReposicaoItemI</fullName>
    <active>true</active>
    <description>QM aberta a partir do caso de reposição em que o problema é com item e Ordem de devolução simbólica criada</description>
    <label>Reposição por item ZRES</label>
</RecordType>