force-app/main/default/objects/QM__c/recordTypes/QMReposicaoItemII.recordType-meta.xml
<RecordType>
    <fullName>QMReposicaoItemII</fullName>
    <active>true</active>
    <description>QM aberta a partir do caso de reposição em que o problema é com item e Ordem de reposição criada.</description>
    <label>Reposição por item ZREP</label>
</RecordType>