force-app/main/default/objects/QM__c/recordTypes/QMReposicaoVolume.recordType-meta.xml
<RecordType>
    <fullName>QMReposicaoVolume</fullName>
    <active>true</active>
    <description>QM para falta de volume.</description>
    <label>Reposição de volume</label>
</RecordType>