force-app/main/default/objects/QM__c/recordTypes/QMSinistro.recordType-meta.xml
<RecordType>
    <fullName>QMSinistro</fullName>
    <active>true</active>
    <description>QM de sinistro total</description>
    <label>Sinistro total</label>
</RecordType>