force-app/main/default/objects/QM__c/recordTypes/QMSinistroParcial.recordType-meta.xml
<RecordType>
    <fullName>QMSinistroParcial</fullName>
    <active>true</active>
    <description>QM de sinistro parcial.</description>
    <label>Sinistro parcial</label>
</RecordType>