force-app/main/default/objects/QM__c/recordTypes/QMSustacao.recordType-meta.xml
<RecordType>
    <fullName>QMSustacao</fullName>
    <active>true</active>
    <description>QM para sustar NF não recebida.</description>
    <label>Sustação</label>
</RecordType>