force-app/main/default/objects/QM__c/recordTypes/QMTranstornoNaEntrega.recordType-meta.xml
<RecordType>
    <fullName>QMTranstornoNaEntrega</fullName>
    <active>true</active>
    <description>QM para reclamação da transportadora/autonomo</description>
    <label>Transtorno na entrega</label>
</RecordType>