force-app/main/default/objects/QM__c/validationRules/QMProrrogacaoAtrasoNoEmbarque.validationRule-meta.xml
<ValidationRule>
    <fullName>QMProrrogacaoAtrasoNoEmbarque</fullName>
    <active>true</active>
    <description>Validação de dados para abertura de QM através do caso. Tipo Prorrogação Atraso no embarque.</description>
    <errorConditionFormula>IF(
   RecordType.DeveloperName = &quot;QMProrrocacao&quot; , 
IF(
    ISPICKVAL( CaseLkp__r.Type , &quot;Atraso no embarque&quot;),
IF(
    NOT(
        ISPICKVAL( ComplaintReasonTxt__c , &quot;04-Expedição&quot;)         
       ) , TRUE, FALSE      
   )  || 
 IF(
    NOT(
        ISPICKVAL(  RecordTxt__c , &quot;Reclamação&quot;)         
       ) , TRUE, FALSE      
   )   ||
 IF(
    NOT(
        ISPICKVAL(   NonConformityTxt__c , &quot;0405-Atraso no embarque&quot;)         
       ) , TRUE, FALSE       
   )
, FALSE
  )
, FALSE
  )</errorConditionFormula>
    <errorMessage>Gentileza ajustar campos abaixo com os seguintes valores (de acordo com o tipo de registro de &quot;Prorrogação&quot; com Tipo &quot;Atraso na entrega&quot;): Natureza da reclamação: 04-Expedição
Registro: Reclamação
Não conformidade: 0405-Atraso no embarque</errorMessage>
</ValidationRule>